# ProcPanel

./: .gitignore  CMakeLists.txt  Details.qml  README.md  main.cpp  processmodel.cpp  processmodel.h  procmanager.cpp  procmanager.h  resourceusage.cpp  resourceusage.h
